# ml-baker

./: .dockerignore  .gitignore  PLAN.md  README.md  pyproject.toml
.claude/skills/generate-modelspec/: SKILL.md
examples/: audit_demo.py  baseline_compare_demo.py  dataset_profile_demo.py  fake_trainable.py  library_mode_demo.py  probe_demo.py  scenario_demo.py
examples/agnews/: README.md  data.py  demo.py  distilbert.py  run.sh  sklearn_logreg.py
examples/docker/: Dockerfile.cpu  Dockerfile.gpu  README.md
examples/lora_finetune/: README.md  lora_ft.py  lora_sim.py  run.py
ml_baker/: __init__.py  audit.py  measure.py  probe.py  protocol.py  report.py  runner.py  runtime.py  scaling.py  spec.py  sweep.py  targets.py
mlprobe/: __init__.py  audit.py  dataset.py  measure.py  probe.py  profile.py  protocol.py  report.py  runner.py  runtime.py  spec.py  sweep.py  targets.py
mlprobe/launchers/: __init__.py  base.py  docker.py  in_process.py  sagemaker.py  subprocess.py
mlprobe/scenarios/: __init__.py  algorithm_selection.py  base.py  baseline_compare.py  parallelization_effect.py  scaling_with_n.py
mlprof/: __init__.py  audit.py  dataset.py  measure.py  probe.py  profile.py  protocol.py  report.py  runner.py  runtime.py  spec.py  sweep.py  targets.py
mlprof/scenarios/: __init__.py  algorithm_selection.py  base.py  baseline_compare.py  parallelization_effect.py  scaling_with_n.py
tests/: conftest.py  synthetic_trainable.py  test_audit_vram.py  test_baseline_compare.py  test_dataset.py  test_eval_only.py  test_launchers.py  test_profile.py  test_scenarios.py
