[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlprobe"
version = "0.0.1"
description = "Profile, audit, and cost-estimate ML training jobs by empirical probing on target infrastructure."
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5",
    "psutil>=5.9",
    "numpy>=1.24",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
gpu = ["nvidia-ml-py>=12"]   # optional, for GPU memory/util measurement
mlflow = ["mlflow>=2.9"]     # optional, for library-mode profile() MLflow logging
sagemaker = ["boto3>=1.34", "sagemaker>=2.200"]  # optional, for the SageMaker launcher (#24)
dev = ["pytest>=7", "ruff>=0.1"]
demo = [
    # Heavy deps used only by examples/. Install with: pip install -e ".[demo]"
    "datasets>=2.16",
    "scikit-learn>=1.3",
    "torch>=2.1",
    "transformers>=4.40",
    "accelerate>=0.27",
    "peft>=0.10",
]

[tool.setuptools.packages.find]
include = ["mlprobe*"]
